crates/analyzer/tests/snapshots/errors__invalid_compiler_version.snap
---
source: crates/analyzer/tests/errors.rs
assertion_line: 259
expression: "error_string(&path, test_files::fixture(path))"
---
error: The current compiler version 0.24.0 doesn't match the specified requirement
  ┌─ compile_errors/invalid_compiler_version.fe:1:8
  │
1 │ pragma <=0.1.0
  │        ^^^^^^^ The specified version requirement
  │
  = Note: Use `pragma 0.24.0` to make the code compile


